# FPS-Client

./: README.md  index.html
.github/workflows/: build.yml
src/: app.js  game.js  network.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
